# opengl_etudes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
assets/shaders/: containerShader.frag  containerShader.vert  lightSourceShader.frag  shader.frag  shader.vert
include/glad/: glad.h
src/: Camera.h  Shader.h  glad.c  main.cpp
